add: auth me to swagger
