# src/routes/api.ts
@@ -2,6 +2,7 @@
 
 import express from "express";
 import authController from "../controllers/auth.controller";
+import authMiddleware from "../middlewares/auth.middleware";
 
 const router = express.Router();
 
@@ -43,6 +44,18 @@ router.post(
         }
      }
   */
+);
+
+router.get(
+  "/auth/me",
+  authMiddleware,
+  authController.me
+  /*
+  #swagger.tags = ['Auth']
+  #swagger.security = [{
+    "bearerAuth": {}
+  }]
+  */
 );
 
 export default router;
